--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">@android:color/system_accent1_600</color>
+    <color name="ic_gamebar_launcher_background">#141B2D</color>
 </resources>
