--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="ic_gamebar_launcher_background">#141B2D</color>
     
     <!-- Default colors for ColorPicker -->
-    <color name="gamebar_default_title_color">#FFFFFF</color>
-    <color name="gamebar_default_value_color">#4CAF50</color>
+    <color name="gamebar_default_title_color">#FFFFFFFF</color>
+    <color name="gamebar_default_value_color">#FF4CAF50</color>
 </resources>
