--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -3,18 +3,56 @@
      SPDX-FileCopyrightText: 2025 kenway214
      SPDX-License-Identifier: Apache-2.0
 -->
-<resources>
-    <declare-styleable name="MinMaxSeekBarPreference">
-        <attr name="minValue" format="integer" />
-        <attr name="maxValue" format="integer" />
-    </declare-styleable>
 
-    <!-- Base attributes available to PartsCustomSeekBarPreference. -->
-    <declare-styleable name="PartsCustomSeekBarPreference">
-        <attr name="defaultValueText" format="string" />
-        <attr name="interval" format="integer" />
-        <attr name="showSign" format="boolean" />
-        <attr name="units" format="string|reference" />
-        <attr name="continuousUpdates" format="boolean" />
-    </declare-styleable>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
+
+  <declare-styleable name="MinMaxSeekBarPreference">
+    <attr name="minValue" format="integer" />
+    <attr name="maxValue" format="integer" />
+  </declare-styleable>
+
+  <!-- Base attributes available to PartsCustomSeekBarPreference. -->
+  <declare-styleable name="PartsCustomSeekBarPreference">
+    <attr name="defaultValueText" format="string" />
+    <attr name="interval" format="integer" />
+    <attr name="showSign" format="boolean" />
+    <attr name="units" format="string|reference" />
+    <attr name="continuousUpdates" format="boolean" />
+  </declare-styleable>
+
+  <declare-styleable name="ColorPanelView">
+    <attr format="boolean" name="gamebar_showOldColor"/>
+    <attr format="enum" name="gamebar_colorShape">
+      <enum name="square" value="0"/>
+      <enum name="circle" value="1"/>
+    </attr>
+    <attr format="color|reference" name="gamebar_borderColor"/>
+  </declare-styleable>
+
+  <declare-styleable name="ColorPickerView" parent="ColorPanelView">
+    <attr format="boolean|reference" name="gamebar_alphaChannelVisible"/>
+    <attr format="string|reference" name="gamebar_alphaChannelText"/>
+    <attr format="color|reference" name="gamebar_sliderColor"/>
+    <attr name="gamebar_borderColor"/>
+  </declare-styleable>
+
+  <declare-styleable name="ColorPreference">
+    <attr format="boolean|reference" name="gamebar_showAlphaSlider"/>
+    <attr format="enum" name="gamebar_previewSize">
+      <enum name="regular" value="0"/>
+      <enum name="large" value="1"/>
+    </attr>
+    <attr name="gamebar_colorShape"/>
+    <attr format="reference" name="gamebar_dialogTitle"/>
+    <attr format="reference" name="gamebar_colorPresets"/>
+    <attr format="enum" name="gamebar_dialogType">
+      <enum name="custom" value="0"/>
+      <enum name="preset" value="1"/>
+    </attr>
+    <attr format="boolean|reference" name="gamebar_showColorShades"/>
+    <attr format="boolean|reference" name="gamebar_allowPresets"/>
+    <attr format="boolean|reference" name="gamebar_allowCustom"/>
+    <attr format="boolean|reference" name="gamebar_showDialog"/>
+  </declare-styleable>
+
 </resources>
